deps/v8/test/message/fail/nf-yield-strict.out
*%(basename)s:5: SyntaxError: Unexpected strict mode reserved word
function yield() { "use strict"; }
         ^^^^^
SyntaxError: Unexpected strict mode reserved word
